force-app/main/default/objects/Relief_Request__c/Relief_Request__c.object-meta.xml
<CustomObject>
    <label>Relief Request</label>
    <nameField>
        <label>Relief Requests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relief Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>