force-app/main/default/objects/Relief_Request__c/fields/Disaster_Type__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Type__c</fullName>
    <label>Disaster Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Earthquake</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>