force-app/main/default/objects/Relief_Request__c/fields/Needed_Items__c.field-meta.xml
<CustomField>
    <fullName>Needed_Items__c</fullName>
    <label>Needed Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>